Split the AuditProcessor into a separate service
AuditProcessor is responsible for processing AuditLog and
MailMessageTrackingService is responsible for converting consolidated
audit state into mail message.

Signed-off-by: Pierre Belloy <p.belloy@axelor.com>